	- Added: MySQL transaction routines
	- Fixed: Error 500 (Apache) after creation of any protected area
	- Fixed: MySQL server has gone away
	- Fixed: Plugin module is broken: Unable to disable, uninstall... any plugin
	- Fixed: Plugin update must be triggered when plugin configuration is updated
	- Fixed: Set MySQL client connection charset to utf8

GUI:
	- Added: info.php file for i-MSCP default theme (file which contain theme metadata)
	- Added: onBeforeDomainChangeStatus and onAfterDomainChangeStatus events
	- Added: Option allowing a subdomain to share the mount point of another domain
	- Changed: Customers can no longer set an arbitrary mount point for their subdomains
	- Changed: Both header and footer backgrounds for tables and location bar are now provided by the jQuery UI theme
	- Fixed: Allow to share domain_dns table between several components (core, plugins..)
	- Fixed: Allow plugins to provide their own assets throught the path /<plugin>/themes/<theme>/assets path
	- Fixed: Plugins must be able to short-circuit execution of an event
	- Fixed: Plugin update must be triggered when plugin configuration is updated
	- Fixed: Unable to delete plugin in some contexts
	- Fixed: Wrong placeholders in admin/imscp_debugger.php
	- Readded: idna_convert class (more flexible because can operate on arbitrary strings
	- Updated: Assets are now reachable through the /themes/<theme>/assets path
	- Updated: Plugin API

Tickets:
	- Fixed #579: Review - i18n issues
	- Fixed #745: Defect - Disk detail in dovecot doesn't include aliases
	- Fixed #779: Defect - When migrating from ispcp the reseller and admin logos are lost
	- Fixed #791: Defect - Unable to change customer IP
	- Fixed #834: Cosmetics - Ticket system menu names
	- Fixed #835: Task - Migration script - ispCP - Remove old php5-fcgi-starter
	- Fixed #838: Bug - Installer skips PHP INI Level dialog for apache fcgi
	- Fixed #852: Bug - Software installer - Unable to install any software