@@ -235,6 +235,10 @@ MYSQL_PREFIX =
 # 'infront' or 'behind' if MYSQL_PREFIX is set to 'yes'
 MYSQL_PREFIX_TYPE =
 
+# String used for assets cache busting
+# Must be updated each time an asset is updated
+THEME_ASSETS_VERSION = 2013082701
+
 IMSCP_SUPPORT_SYSTEM_PATH = ticket_system.php
 
 IMSCP_SUPPORT_SYSTEM_TARGET = _self
