@@ -157,6 +157,7 @@ require_once  'iMSCP/Config/Handler.php';
  * @property string CONF_DIR i-MSCP configuration directory (eg. /etc/imscp)
  * @property string USER_WEB_DIR Directory which holds i-MSCP customer user Web directories
  * @property int WEB_FOLDER_PROTECTION Whether or not the Web folder protection is available
+ * @property int THEME_ASSETS_VERSION unique string used for assets cache busting
  *
  * @category    iMSCP
  * @package     iMSCP_Core
