@@ -29,6 +29,7 @@ ENGINE:
 	- Fixed: Set MySQL client connection charset to utf8
 
 GUI:
+	- Added: Assets cache busting
 	- Added: info.php file for i-MSCP default theme (file which contain theme metadata)
 	- Added: onBeforeDomainChangeStatus and onAfterDomainChangeStatus events
 	- Added: Option allowing a subdomain to share the mount point of another domain
@@ -40,6 +41,7 @@ GUI:
 	- Fixed: Plugin update must be triggered when plugin configuration is updated
 	- Fixed: Unable to delete plugin in some contexts
 	- Fixed: Wrong placeholders in admin/imscp_debugger.php
+	- Removed: IE6 support
 	- Readded: idna_convert class (more flexible because can operate on arbitrary strings
 	- Updated: Assets are now reachable through the /themes/<theme>/assets path
 	- Updated: Plugin API
